Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/ArrayAccesNotInt.ru
/? Descripción: caso de prueba que verifica que la posicion
/? de un array sea de tipo int
/? Salida esperada:
/? ERROR: SEMÁNTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 13 | COLUMNA 22 | LA POSICION DE ACCESO NO ES UN ENTERO


start{
Str a;
Array Bool arraybool;
a = "hola";
arraybool = new Bool[a];
arraybool[1] = true;
}